@@ -46,7 +46,8 @@ sub load {
       next if $line =~ /^\s*$/;   # Skip blank lines
       next if $line =~ /^\s*#/;   # Skip comments
       $line =~ s/^(.*)#.*$/$1/;   # Strip comments at end of line
-      push @lines, $line;
+      push @lines, "$line ";      # Add a trailing slash in case of a multiline
+                                  # So when joining them, there is no unwanted concatenation
    }
    close($in);
 
