@@ -1,6 +1,7 @@
 Revision history for Perl extension Metabrik.
 
 1.12
+   - bugfix: shell::rc, shell::script: add a trailing whitespace on multilines
 
 1.11 Sun Nov 22 17:46:43 CET 2015
    - FEATURE: core::shell: auto prefix by run if entered command is a used Brik
